--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ body, html {
   display: inline-block;
   width: 1px;
   height: 24px;
-  background-color: #555;
+  background-color: #ffffff;
   margin: 0 12px;
   opacity: 0.5;
   vertical-align: middle;
