--- a/css/style.CSS
+++ b/css/style.CSS
@@ -1191,7 +1191,7 @@ body.modal-open {
 #atlas-scroll-wrapper {
     width: 1920px;
     height: 1080px;
-    overflow: auto;
+    overflow: hidden;
     margin: 0 auto
 }
 
