--- a/style.css
+++ b/style.css
@@ -69,31 +69,6 @@ th.highest-spread {
     vertical-align: middle
 }
 
-#mobile-blocker {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #111;
-    color: #fff;
-    z-index: 9999;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 2rem
-}
-
-.mobile-blocker-content {
-    max-width: 500px
-}
-
-@media (max-width:767px) {
-    #mobile-blocker {
-        display: flex
-    }
-}
 
 #spreadTable th {
     background: 0 0 !important;
@@ -807,7 +782,7 @@ body.modal-open {
 
 .custom-tab.active {
     background-color: #000;
-    color: #fff;
+    color: #000000;
     border-top: 2px solid #0ff;
     border-left: 1px solid #333;
     border-right: 1px solid #333;
@@ -832,7 +807,7 @@ body.modal-open {
 }
 
 .nav-tabs .nav-link.active {
-    color: #fff;
+    color: #000000;
     background-color: #222;
     border-bottom: 2px solid #ffc107
 }
